Fixed boxes in grid so that they do not jump unexpected

--- a/mxcube3/ui/components/SampleGrid/SampleGrid.css
+++ b/mxcube3/ui/components/SampleGrid/SampleGrid.css
@@ -40,3 +40,6 @@
     background: #CEE3F6;
 }
 
+.btn-link {
+    color: #333 !important;
+}
